--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,15 +21,15 @@ body {
 /* ========== TRAVEL.HTML PAGE ========== */
 
 /* ===== OPENWEATHER CONTAINER ===== */
-.row {
-    border: 2px solid #000;
-}
-
 .forecast-card {
-    width: 20%;
-    border-right: 1px solid #000;
+    width: 50px;
+    height: 100px;
+    border: 1px solid #000;
 }
 
-#day5 {
+#day1,
+#day2,
+#day3,
+#day4 {
     border-right: none;
 }
