--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,18 @@
     box-sizing: border-box;
 }
 
+/* ========== GLOBAL NAVBAR ========== */
+.navbar {
+    width: 960px;
+    margin: 0 auto;
+}
 
+.navbar-light .navbar-nav .nav-item {
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-
-
-
-
-
+/* ========== MAIN PAGE ========== */
 
 
 
@@ -16,6 +21,10 @@
 
 
 /* ========== TRAVEL.HTML PAGE ========== */
+
+
+
+
 
 /* ===== OPENWEATHER CONTAINER ===== */
 .forecast-card {
