added some styling to index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,19 @@
 #day4 {
     border-right: none;
 }
+
+
+
+
+
+/* ===== FAVORITES PAGE =====  */
+.favorites-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.favorites {
+    margin-right: 40px;
+    outline: none;
+}
