--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,21 +28,18 @@
 
 /* ===== OPENWEATHER CONTAINER ===== */
 .forecast-card {
-    width: 200px;
+    width: 20%;
     height: 100px;
     border: 1px solid #000;
+    text-align: center;
 }
 
-#day1,
-#day2,
-#day3,
-#day4 {
+#day-01,
+#day-11,
+#day-21,
+#day-31 {
     border-right: none;
 }
-
-
-
-
 
 /* ===== FAVORITES PAGE =====  */
 .favorites-row {
