--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,11 +72,36 @@ hr {
 
 
 /* ===== OPENWEATHER CONTAINER ===== */
+#weather-data {
+    width: 30%;
+    margin: 0 0 0 20px;
+    -webkit-box-shadow: 0px 5px 5px 1px #000000; 
+    box-shadow: 0px 5px 5px 1px #000000;
+}
+
 .forecast-card {
     width: 20%;
-    height: 100px;
+    height: 150px;
+    /* padding-top: 10px; */
     border: 1px solid #000;
     text-align: center;
+    background: #007BFF;
+    background: -moz-linear-gradient(top, #007BFF 0%, #FFA500 50%, #007BFF 100%);
+    background: -webkit-linear-gradient(top, #007BFF 0%, #FFA500 50%, #007BFF 100%);
+    background: linear-gradient(to bottom, #007BFF 0%, #FFA500 50%, #007BFF 100%);
+}
+
+.weather-temp {
+    height: 33%;
+}
+
+.weather-description {
+    height: 33%;
+    font-size: 14px;
+}
+
+.weather-date {
+    height: 33%;
 }
 
 #day-01,
