--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,23 +66,28 @@ hr {
 }
 
 /* ========== TRAVEL.HTML PAGE ========== */
-
+#btnInfoRow {
+    position: relative;
+}
 
 
 
 
 /* ===== OPENWEATHER CONTAINER ===== */
 #weather-data {
-    width: 30%;
+    width: 295px;
     margin: 0 20px 20px auto;
     -webkit-box-shadow: 0px 5px 5px 1px #000000; 
     box-shadow: 0px 5px 5px 1px #000000;
+    position: absolute;
+    top: 115px;
+    right: 0;
 }
 
 .forecast-card {
-    width: 20%;
+    width: 59px;
     height: 135px;
-    /* padding-top: 10px; */
+    padding: 5px;
     border: 1px solid #000;
     text-align: center;
     background: #fff;
@@ -94,7 +99,7 @@ hr {
 
 .weather-description {
     height: 33%;
-    font-size: 14px;
+    font-size: 10px;
 }
 
 .weather-date {
