--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,8 +70,15 @@ hr {
     position: relative;
 }
 
+.btn-tabs {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-
+.btn-tabs:hover {
+    background: #FFA500;
+    border: 1px solid #000;
+    box-shadow: 0px 5px 5px 1px #000000;
+}
 
 /* ===== OPENWEATHER CONTAINER ===== */
 #weather-data {
