--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 .wrapper {
+    min-width: 100%;
     min-height: 100vh;
     margin-bottom: -75px;
 }
@@ -25,7 +26,15 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* ========== MAIN PAGE ========== */
+/* ===== LOGO ===== */
+.navbar-brand img:hover {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}
+
+/* ==================== MAIN PAGE ==================== */
 #main-content-container {
     background: url(../images/mainbackground.jpeg) no-repeat center center fixed;
     background-size: cover;
@@ -65,7 +74,7 @@ hr {
     height: 75px;
 }
 
-/* ========== TRAVEL.HTML PAGE ========== */
+/* ==================== TRAVEL.HTML PAGE ==================== */
 #btnInfoRow {
     position: relative;
 }
@@ -78,6 +87,10 @@ hr {
     background: #FFA500;
     border: 1px solid #000;
     box-shadow: 0px 5px 5px 1px #000000;
+}
+
+.clearfix {
+    clear: both;
 }
 
 /* ===== OPENWEATHER CONTAINER ===== */
@@ -120,7 +133,7 @@ hr {
     border-right: none;
 }
 
-/* ===== FAVORITES PAGE =====  */
+/* ==================== FAVORITES PAGE ====================  */
 .favorites-row {
     display: flex;
     justify-content: center;
@@ -142,3 +155,24 @@ hr {
     border-top: 5px solid #FFA500;
     text-align: center;
 }
+
+/* ===== LOGO SHAKES ON HOVER ===== */
+@keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+  
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
+}
+ 
+  
