--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .wrapper {
-    min-width: 100%;
+    width: 100%;
     min-height: 100vh;
     margin-bottom: -75px;
 }
@@ -17,7 +17,6 @@ body {
     border-bottom: 5px solid #FFA500;
 }
 .navbar {
-    width: 960px;
     margin: 0 auto;
 }
 
@@ -34,10 +33,21 @@ body {
     perspective: 1000px;
 }
 
+/* ===== HAMBURGER MENU ===== */
+.navbar-light .navbar-toggler {
+    border-color: #fff;
+    outline: none;
+}
+
+#toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
+}
+
 /* ==================== MAIN PAGE ==================== */
 #main-content-container {
     background: url(../images/mainbackground.jpeg) no-repeat center center fixed;
     background-size: cover;
+    margin: 0;
 }
 
 #main-form {
