--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,17 @@ body {
     margin: 0 auto;
 }
 
-.navbar-light .navbar-nav .nav-item {
+#navbarNav .nav-item {
     color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 15px;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    transition: color 1s;
+}
+
+#navbarNav .nav-item:hover {
+    color: #FFA500;
 }
 
 /* ===== LOGO ===== */
@@ -31,6 +39,24 @@ body {
     transform: translate3d(0, 0, 0);
     backface-visibility: hidden;
     perspective: 1000px;
+}
+
+@keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+  
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
 }
 
 /* ===== HAMBURGER MENU ===== */
@@ -166,23 +192,6 @@ hr {
     text-align: center;
 }
 
-/* ===== LOGO SHAKES ON HOVER ===== */
-@keyframes shake {
-    10%, 90% {
-      transform: translate3d(-1px, 0, 0);
-    }
-  
-    20%, 80% {
-      transform: translate3d(2px, 0, 0);
-    }
-  
-    30%, 50%, 70% {
-      transform: translate3d(-4px, 0, 0);
-    }
-  
-    40%, 60% {
-      transform: translate3d(4px, 0, 0);
-    }
-}
+
  
   
