fav page responsive and styled

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,11 +247,11 @@ hr {
     padding-left: 15px;
 }
 
-#heart {
+.favBtn {
     align-self: end;
     background: none;
     border: none;
-    outline: none;
+    outline: none !important;
 }
 
 .address-review {
@@ -284,11 +284,11 @@ hr {
     padding-left: 15px;
 }
 
-#foodFav {
+.favBtn {
     align-self: end;
     background: none;
     border: none;
-    outline: none;
+    outline: none !important;
 }
 
 .img-resInfo {
@@ -325,7 +325,31 @@ hr {
 }
 
 /* ==================== FAVORITES PAGE ==================== */
+#favInfoRow {
+    margin: 0 0 40px 0;
+}
 
+.favoriteCard {
+    padding: 10px 0;
+    margin-bottom: 10px;
+}
+
+.favoriteCard img {
+    margin-bottom: 10px;
+}
+
+.favoriteCard span {
+    font-weight: 700;
+}
+
+.favoriteCard p {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+.favoriteCard a:hover {
+    color: #FFA500;
+    text-decoration: none;
+}
 
 /* ===== GLOBAL FOOTER ====== */
 .global-footer {
